// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactInfoContent should match snapshot when groups are available but no one is linked to the specified contact 1`] = `
<div>
  <h3
    className="u-title-h2 u-mt-1-half u-mb-1"
  >
    Contact informations
  </h3>
  <ol
    className="u-nolist u-m-0 u-p-0 u-pl-1-half u-pl-0-s"
  >
    <li>
      <div
        className="u-flex u-mt-half"
      >
        <div
          className="u-mr-1 u-fz-large"
        >
          <svg
            className="styles__icon___23x3R"
            height="16"
            style={
              Object {
                "fill": "var(--coolGrey)",
              }
            }
            width="16"
          >
            <use
              xlinkHref="#telephone"
            />
          </svg>
        </div>
        <div>
          <div
            className="u-mb-half u-breakword u-fz-medium"
          >
            <a
              className="u-link"
              href="tel:+33 (1)9 14 02 28 31"
            >
              +33 (1)9 14 02 28 31
            </a>
          </div>
          <div
            className="u-mb-half u-breakword u-fz-medium"
          >
            <a
              className="u-link"
              href="tel:+33 (2)3 99 53 65 21"
            >
              +33 (2)3 99 53 65 21
            </a>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="u-flex u-mt-half"
      >
        <div
          className="u-mr-1 u-fz-large"
        >
          <svg
            className="styles__icon___23x3R"
            height="16"
            style={
              Object {
                "fill": "var(--coolGrey)",
              }
            }
            width="16"
          >
            <use
              xlinkHref="#email"
            />
          </svg>
        </div>
        <div>
          <div
            className="u-mb-half u-breakword u-fz-medium"
          >
            <a
              className="u-link"
              href="mailto:rikki.white@celmax.name"
            >
              rikki.white@celmax.name
            </a>
          </div>
          <div
            className="u-mb-half u-breakword u-fz-medium"
          >
            <a
              className="u-link"
              href="mailto:eleanore.fennell@thermolock.name"
            >
              eleanore.fennell@thermolock.name
            </a>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="u-flex u-mt-half"
      >
        <div
          className="u-mr-1 u-fz-large"
        >
          <svg
            className="styles__icon___23x3R"
            height="16"
            style={
              Object {
                "fill": "var(--coolGrey)",
              }
            }
            width="16"
          >
            <use
              xlinkHref="#location"
            />
          </svg>
        </div>
        <div>
          <div
            className="u-mb-half u-breakword u-fz-medium"
          >
            <a
              className="u-link"
              href="https://nominatim.openstreetmap.org/search?format=html&q=48%20Fuller%20Road%2006635%20Stafford%20Solomon%20Islands"
              rel="noopener noreferrer"
              target="_blank"
            >
              48 Fuller Road 06635 Stafford Solomon Islands
            </a>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="u-flex u-mt-half"
      >
        <div
          className="u-mr-1 u-fz-large"
        >
          <svg
            className="styles__icon___23x3R"
            height="16"
            style={
              Object {
                "fill": "var(--coolGrey)",
              }
            }
            width="16"
          >
            <use
              xlinkHref="#calendar"
            />
          </svg>
        </div>
        <div>
          <div
            className="u-mb-half u-breakword u-fz-medium"
          >
            1998-06-03
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="u-flex u-mt-half"
      >
        <div
          className="u-mr-1 u-fz-large"
        >
          <svg
            className="styles__icon___23x3R"
            height="16"
            style={
              Object {
                "fill": "var(--coolGrey)",
              }
            }
            width="16"
          >
            <use
              xlinkHref="#flag"
            />
          </svg>
        </div>
        <div>
          <div
            className="u-mb-half u-breakword u-fz-medium"
          >
            unsupportedField
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`ContactInfoContent should match snapshot with accounts and groups 1`] = `
Array [
  <div
    className="u-mb-2"
  >
    <h3
      className="u-title-h2 u-mt-1-half u-mb-1"
    >
      Groups
    </h3>
    <ol
      className="u-nolist u-m-0 u-p-0"
    >
      <li
        className="u-dib u-slateGrey u-fz-small u-p-half u-mr-half u-w-auto u-maw-6 u-bg-paleGrey u-ellipsis"
      >
        toto
      </li>
    </ol>
  </div>,
  <div>
    <h3
      className="u-title-h2 u-mt-1-half u-mb-1"
    >
      Contact informations
    </h3>
    <ol
      className="u-nolist u-m-0 u-p-0 u-pl-1-half u-pl-0-s"
    >
      <li>
        <div
          className="u-flex u-mt-half"
        >
          <div
            className="u-mr-1 u-fz-large"
          >
            <svg
              className="styles__icon___23x3R"
              height="16"
              style={
                Object {
                  "fill": "var(--coolGrey)",
                }
              }
              width="16"
            >
              <use
                xlinkHref="#email"
              />
            </svg>
          </div>
          <div>
            <div
              className="u-mb-half u-breakword u-fz-medium"
            >
              <a
                className="u-link"
                href="mailto:rikki.white@celmax.name"
              >
                rikki.white@celmax.name
              </a>
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="u-flex u-mt-half"
        >
          <div
            className="u-mr-1 u-fz-large"
          >
            <svg
              className="styles__icon___23x3R"
              height="16"
              style={
                Object {
                  "fill": "var(--coolGrey)",
                }
              }
              width="16"
            >
              <use
                xlinkHref="#calendar"
              />
            </svg>
          </div>
          <div>
            <div
              className="u-mb-half u-breakword u-fz-medium"
            >
              1998-06-03
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="u-flex u-mt-half"
        >
          <div
            className="u-mr-1 u-fz-large"
          >
            <svg
              className="styles__icon___23x3R"
              height="16"
              style={
                Object {
                  "fill": "var(--coolGrey)",
                }
              }
              width="16"
            >
              <use
                xlinkHref="#flag"
              />
            </svg>
          </div>
          <div>
            <div
              className="u-mb-half u-breakword u-fz-medium"
            >
              unsupportedField
            </div>
          </div>
        </div>
      </li>
    </ol>
  </div>,
  <h3
    className="u-title-h2 u-mt-1-half u-mb-1"
  >
    Account linked to this contact
  </h3>,
  <ol
    className="u-nolist u-m-0 u-p-0 u-pl-1-half u-pl-0-s"
  >
    <li>
      <div
        className="u-flex u-mt-1 u-mb-half"
      >
        <div
          className="u-mr-1"
        >
          <svg
            className="styles__icon___23x3R"
            height="16"
            style={Object {}}
            width="16"
          >
            <use
              xlinkHref="#google"
            />
          </svg>
        </div>
        <div>
          <div
            className="u-mb-half u-breakword"
          >
            <p
              className="MuiTypography-root-1 MuiTypography-body1-10"
            >
              Google
            </p>
            <span
              className="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorTextSecondary-34"
            >
              john.doe@gmail.com
            </span>
          </div>
        </div>
      </div>
    </li>
  </ol>,
]
`;

exports[`ContactInfoContent should match snapshot with accounts without groups 1`] = `
Array [
  <div>
    <h3
      className="u-title-h2 u-mt-1-half u-mb-1"
    >
      Contact informations
    </h3>
    <ol
      className="u-nolist u-m-0 u-p-0 u-pl-1-half u-pl-0-s"
    >
      <li>
        <div
          className="u-flex u-mt-half"
        >
          <div
            className="u-mr-1 u-fz-large"
          >
            <svg
              className="styles__icon___23x3R"
              height="16"
              style={
                Object {
                  "fill": "var(--coolGrey)",
                }
              }
              width="16"
            >
              <use
                xlinkHref="#email"
              />
            </svg>
          </div>
          <div>
            <div
              className="u-mb-half u-breakword u-fz-medium"
            >
              <a
                className="u-link"
                href="mailto:rikki.white@celmax.name"
              >
                rikki.white@celmax.name
              </a>
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="u-flex u-mt-half"
        >
          <div
            className="u-mr-1 u-fz-large"
          >
            <svg
              className="styles__icon___23x3R"
              height="16"
              style={
                Object {
                  "fill": "var(--coolGrey)",
                }
              }
              width="16"
            >
              <use
                xlinkHref="#calendar"
              />
            </svg>
          </div>
          <div>
            <div
              className="u-mb-half u-breakword u-fz-medium"
            >
              1998-06-03
            </div>
          </div>
        </div>
      </li>
      <li>
        <div
          className="u-flex u-mt-half"
        >
          <div
            className="u-mr-1 u-fz-large"
          >
            <svg
              className="styles__icon___23x3R"
              height="16"
              style={
                Object {
                  "fill": "var(--coolGrey)",
                }
              }
              width="16"
            >
              <use
                xlinkHref="#flag"
              />
            </svg>
          </div>
          <div>
            <div
              className="u-mb-half u-breakword u-fz-medium"
            >
              unsupportedField
            </div>
          </div>
        </div>
      </li>
    </ol>
  </div>,
  <h3
    className="u-title-h2 u-mt-1-half u-mb-1"
  >
    Account linked to this contact
  </h3>,
  <ol
    className="u-nolist u-m-0 u-p-0 u-pl-1-half u-pl-0-s"
  >
    <li>
      <div
        className="u-flex u-mt-1 u-mb-half"
      >
        <div
          className="u-mr-1"
        >
          <svg
            className="styles__icon___23x3R"
            height="16"
            style={Object {}}
            width="16"
          >
            <use
              xlinkHref="#google"
            />
          </svg>
        </div>
        <div>
          <div
            className="u-mb-half u-breakword"
          >
            <p
              className="MuiTypography-root-1 MuiTypography-body1-10"
            >
              Google
            </p>
            <span
              className="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorTextSecondary-34"
            >
              john.doe@gmail.com
            </span>
          </div>
        </div>
      </div>
    </li>
  </ol>,
]
`;
